tests/paczka1/fuzzy1/56638536.err
Error in line 6: 4dVba S778 00,6
Error in line 4: VI26HjNrV9e A242 88,3
Error in line 9: rKK3s6Bew A242 29,9
Error in line 2: 4dVba S778 0,3
Error in line 33: A534 S788 11,2
Error in line 22: CfF A242 30,8
Error in line 37: I9tBUDC07e A534 25,2
